fix spacing comparison images. set correct base font size. remove margin-bottom from form group and other last-child elements

--- a/sass/vendor-extensions/_bootstrap-theme.scss
+++ b/sass/vendor-extensions/_bootstrap-theme.scss
@@ -25,6 +25,12 @@ a .glyphicon-spin {
   text-decoration: none;
 }
 
+p:last-child,
+.form-group:last-child,
+.panel:last-child {
+  margin-bottom: 0;
+}
+
 html.js {
   .btn .ajax-throbber {
     margin-left: .5em;
